--- a/index.html
+++ b/index.html
@@ -79,5 +79,25 @@
         </li>
       </ul>
     </section>
+    <section>
+      <h2>Comidas</h2>
+      <ul>
+        <li>
+          <div class="details">
+            <h3>Carne</h3>
+            <p class="description">Lorem, ipsum do</p>
+          </div>
+          <strong class="price"> R$37.70 </strong>
+        </li>
+
+        <li>
+          <div class="details">
+            <h3>Arroz</h3>
+            <p class="description">Lorem, ipsum dolor</p>
+          </div>
+          <strong class="price"> R$27.70 </strong>
+        </li>
+      </ul>
+    </section>
   </body>
 </html>
