adicionado seção comida

--- a/index.html
+++ b/index.html
@@ -85,7 +85,10 @@
         <li>
           <div class="details">
             <h3>Carne</h3>
-            <p class="description">Lorem, ipsum do</p>
+            <p class="description">
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+              Fugitunde quos iure !
+            </p>
           </div>
           <strong class="price"> R$37.70 </strong>
         </li>
@@ -93,7 +96,10 @@
         <li>
           <div class="details">
             <h3>Arroz</h3>
-            <p class="description">Lorem, ipsum dolor</p>
+            <p class="description">
+              Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+              Fugitunde quos iure !
+            </p>
           </div>
           <strong class="price"> R$27.70 </strong>
         </li>
